--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                             <!-- Copyright Left -->
                             <div class="copyright-left"> جميع الحقوق محفوظة لسيرفيكس 2020 &copy; </div>
                             <!-- Copyright Right -->
-                            <div class="copyright-right">صنح <i class="fas fa-heart"></i> بواسطة <a href="https://ugbltd.com/">UGB</a></div>
+                            <div class="copyright-right">صنع <i class="fas fa-heart"></i> بواسطة <a href="https://ugbltd.com/">UGB</a></div>
                         </div>
                     </div>
                 </div>
